@@ -1,3 +1,8 @@
+2012-02-07  Marek Polacek  <polacek@redhat.com>
+
+	* math/Makefile (tests): Add tst-CMPLX2.
+	* math/tst-CMPLX2.c: New file.
+
 2012-02-07  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* sysdeps/powerpc/fpu/libm-test-ulps: Adjust ULPs for jn tests.
